--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2330,6 +2330,11 @@ input, select, textarea {
 				text-align: left;
 			}
 
+			.float-center {
+				text-align: center;
+				margin: auto;
+			}
+
 			ol.upper-roman {
 				list-style-type: upper-roman;
 			}
