--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2326,6 +2326,10 @@ input, select, textarea {
 				background-color: #efefef;
 			}
 
+			#main > section.nine {
+				background-color: #f8f8f8;
+			}
+
 			.float-left {
 				text-align: left;
 			}
