--- a/assets/css/slideshow.css
+++ b/assets/css/slideshow.css
@@ -26,12 +26,13 @@ top: 40%;
 width: auto;
 padding: 16px;
 margin-top: -50px;
-color: white;
+color: black;
 font-weight: bold;
 font-size: 20px;
 border-radius: 0 3px 3px 0;
 user-select: none;
 -webkit-user-select: none;
+background-color: rgba(0, 0, 0, 0.143);
 }
 /* Position the "prev button" to the left */
 .prev {
@@ -52,10 +53,10 @@ background-color: rgba(0, 0, 0, 0.8);
 
 /* Number text (1/3 etc) */
 .numbertext {
-color: #f2f2f2;
-font-size: 12px;
+color: black;
+font-size: 26px;
 padding: 8px 12px;
-position: absolute;
+position: relative;
 top: 0;
 }
 
@@ -63,7 +64,7 @@ top: 0;
 .caption-container {
 text-align: center;
 background-color: #222;
-padding: 2px 16px;
+margin-top: 25px;
 color: white;
 }
 
@@ -81,7 +82,7 @@ width: 16.66%;
 
 /* Add a transparency effect for thumnbail images */
 .demo {
-opacity: 0.6;
+opacity: 0.3;
 }
 
 .active,
